Phase 4: the coarse tier -- how long one execution took
The half the fine tier structurally could not reach. A CoarseContext per
execution -- type, parent, start timestamp -- published into the slot beside
the fine operation id and read from the sampler with no lock and no fence,
which is safe for exactly one reason: every identity field is a val, so the
end of the constructor carries a freeze. Never recycled; reuse would break
that freeze and let the sampler credit a sample to a context that had since
become a different execution.

Every sample now records the pair (fine, coarse), credited up the parent
chain, so the breakdown of a nesting operation sums. That pair is the
cross-tabulation, and neither tier produces it alone.

Per type: executions, mean, min, max, p50/p90/p99 -- MEASURED, two timestamps
per execution, the only numbers in the report that are not sampled -- plus
busy/exec from running samples only, so `mean - busy/exec` IS the waiting.
The occupancy-masquerading-as-CPU problem plan.md flagged as unsettled does
not arise: phase 6 already reads thread state, so the walk credits running
samples separately and the column means what it says.

Percentiles from a 320-bucket log histogram, 2.5 KB per type per thread,
allocated lazily so a fine-tier-only program pays nothing for any of it.
Reported at the top of the bucket: at most 12.5% high, never low.

expectBalanced checks the coarse half first -- a leaked context collects a
whole request's samples where a leaked label collects one operation's.

Bench, behind --coarse so the tier's cost stays measurable against its own
absence. Promoted against the boundary rather than by taste: checkpoint
containing maintain, plus rankBatch; traverse is the negative control, 905 ns
at a 65.2% share against a 2610 ns threshold. Plus `request`, a variable
batch, because percentiles over a distribution with no spread say nothing.

The truth here is an identity rather than an estimate, and that is structural:
a span is a quan